--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,11 +1,11 @@
 .language-mermaid {
     font-family: monospace !important;
 }
-.hero {
-  background-image: url("../assets/webform-bg.png");
+.md-main {
+  background-image: url("../assets/images/webform-bg.png");
   background-size: cover;
   background-position: center;
-  padding: 4rem 2rem;
+  padding: 0 0 0 0;
   border-radius: 1rem;
   color: white;
 }
