--- a/site/stylesheets/extra.css
+++ b/site/stylesheets/extra.css
@@ -1,3 +1,11 @@
 .language-mermaid {
     font-family: monospace !important;
 }
+.hero {
+  background-image: url("../assets/images/webform-bg.png");
+  background-size: cover;
+  background-position: center;
+  padding: 0 0 0 0;
+  border-radius: 1rem;
+  color: white;
+}
