--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -2,10 +2,14 @@
     font-family: monospace !important;
 }
 .md-main {
-  background-image: url("../assets/images/webform-bg.png");
-  background-size: cover;
-  background-position: center;
+  background-image: linear-gradient(
+      rgba(30, 30, 30, 0.95),
+      rgba(30, 30, 30, 0.95)
+    ),
+    url("./assets/images/webform-bg.png");
+  background-size: 100vw 90vh;
+  background-repeat: no-repeat;
+  background-position: top center;
   padding: 0 0 0 0;
   border-radius: 1rem;
-  color: white;
 }
