--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -13,7 +13,7 @@
   --md-accent-bg-color:                hsla(0, 0%, 100%, 1);
   --md-accent-bg-color--light:         hsla(0, 0%, 100%, 0.7);
 }
-[data-md-color-scheme=slate] {
+[data-md-color-scheme="slatepibico"] {
     --md-default-fg-color: hsla(var(--md-hue), 15%, 90%, 0.82);
     --md-default-fg-color--light: hsla(var(--md-hue), 15%, 90%, 0.56);
     --md-default-fg-color--lighter: hsla(var(--md-hue), 15%, 90%, 0.32);
