--- a/site/stylesheets/extra.css
+++ b/site/stylesheets/extra.css
@@ -1,8 +1,13 @@
 .language-mermaid {
     font-family: monospace !important;
 }
+:root  > * { 
+  --md-primary-fg-color:               hsla(#2e3986, 1);
+  --md-primary-fg-color--light:        hsla(#4682B4, 1);
+  --md-primary-fg-color--dark:         hsla(#101d27, 1);
+}
 [data-md-color-scheme="pibico"] { 
-  --md-primary-fg-color:               hsla(#171d44, 1);
+  --md-primary-fg-color:               hsla(#2e3986, 1);
   --md-primary-fg-color--light:        hsla(#4682B4, 1);
   --md-primary-fg-color--dark:         hsla(#101d27, 1);
   --md-primary-bg-color:               hsla(0, 0%, 100%, 1);
@@ -13,7 +18,7 @@
   --md-accent-bg-color:                hsla(0, 0%, 100%, 1);
   --md-accent-bg-color--light:         hsla(0, 0%, 100%, 0.7);
 }
-[data-md-color-scheme="slatepibico"] {
+[data-md-color-scheme="slate"] {
     --md-default-fg-color: hsla(var(--md-hue), 15%, 90%, 0.82);
     --md-default-fg-color--light: hsla(var(--md-hue), 15%, 90%, 0.56);
     --md-default-fg-color--lighter: hsla(var(--md-hue), 15%, 90%, 0.32);
@@ -96,4 +101,7 @@
     border-radius: 1vw;
     font-size: 1vw;
     margin-top: 0.5vw;
+}
+header {
+    background-color: rgba(5, 15, 44, 1) !important;
 }
